chore(scala): minor code refactoring